--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@ nav .nav-link{
     font-size: 18px;
     font-weight: 600;
     color: #e40023;
-    margin: 0 3 0px;
+    margin: 0 30px;
     position: relative;
 }
 
@@ -19,6 +19,8 @@ nav .nav-link{
     margin: 0 200px;
     color: #e40023;
     font-weight: 800;
+    font-size: 35px;
+    font-family: "Jersey 10", sans-serif;
 }
 
 .auto{
@@ -74,9 +76,28 @@ nav .nav-link{
     font-size: large;
 }
 
+.label_1{
+    color: white;
+    font-weight: 600;
+    font-size: large;
+    margin: 0 20px 20px 0;
+}
+
 .form-group span{
     color: red;
     background-color: white;
+}
+
+#departamento{
+    width: 200px;
+    height: 35px;
+    border-radius: 10px;
+}
+
+#ciudads{
+    width: 200px;
+    height: 35px;
+    border-radius: 10px;
 }
 
 small{
@@ -91,16 +112,29 @@ small{
 
 .boton button{
     width: 200px;
-    margin: 0px !important;
+    margin: 0px 5px!important;
 }
 
-.titles{
+.title_cliente{
+    color: black;
+    text-align: center;
+    margin: 30px 0;
+}
+
+.title_ganador{
     color: #e40023;
     text-align: center;
     margin: 30px 0;
 }
 
-.imagen{
-    display: flex;
-    justify-content: center;
+#body_clientes{
+    background-image: url(https://www.cubicrenting.com/wp-content/uploads/cubic_header-01-1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#body_ganador{
+    background-image: url(https://img.freepik.com/vector-premium/felicidades-confeti_51486-281.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
